<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <DUT Name="ST_Arg" Id="{4f59ef17-3af4-404f-a2c8-af1971ec3536}">
    <Declaration><![CDATA[(* Generic data type used for Programs/Functions/Function Blocks. *)
TYPE ST_Arg EXTENDS __SYSTEM.AnyType :
STRUCT
	sValue : T_MaxString; 	// Data of parameter as a string for easy convertion.
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>